# allycat-rag-graprag

./: .dockerignore  .gitignore  1_crawl_site.ipynb  1_crawl_site.py  2_process_files.ipynb  2_process_files.py  2a_process_html_docling.ipynb  2a_process_html_docling.py  2b_process_graph.py  2b_process_html_dpk.ipynb  2b_process_html_dpk.py  3_save_to_vector_db.ipynb  3_save_to_vector_db.py  3b_save_to_graph_db.py  4_query.ipynb  4_query.py  4b_query_graph.py  Dockerfile  Dockerfile-dev  README.md  app.py  app_chainlit.py  app_chainlit_graph.py  app_flask.py  app_flask_graph.py  deploy-google-cloud-run.md  deploy.md  docker-startup.sh  env.sample.txt  file_utils.py  my_config.py  news.md  package-lock.json  package.json  pyproject.toml  requirements-docker.txt  requirements.txt
.chainlit/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  docs_website_change.yaml  generic_issue.yaml  question.yaml  use-case.yaml
.github/PULL_REQUEST_TEMPLATE/: docs_website_pr.md
archived/: 2b_process_html_dpk.py
docs/: configuration.md  customizing-allycat.md  deploy-google-cloud-run.md  deploy.md  developing-allycat.md  llm-local.md  llms-remote.md  package-docker.md  package-native.md  running-allycat.md  running-in-docker.md  running-natively.md
docs/graphrag-demo/: Graph Data Process.md  Hybrid Query Engine.md  Neo4j Database Upload.md  Prompt-Examples.md  RAG-vs-GraphRAG.md  Setup.md
templates/: index.html
